# all-in-agents

./: .gitignore  README.md  README_zh.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: eval.py
src/all_in_agents/: __init__.py  __main__.py  cli.py  utils.py
src/all_in_agents/adapters/: __init__.py  anthropic.py  base.py  openai.py  openai_chat.py  openai_responses.py  openai_utils.py
src/all_in_agents/agents/: __init__.py  base.py  control.py  harness.py  multi.py  nodes.py  prompt_budget.py  streaming.py  tool_selection.py
src/all_in_agents/core/: __init__.py  artifacts.py  budget.py  checkpoint.py  content.py  context.py  errors.py  flow.py  node.py  retry.py  run.py  subflow.py  tokens.py  trace.py  workflow.py
src/all_in_agents/history/: __init__.py  compactor.py  manager.py  store.py
src/all_in_agents/tools/: __init__.py  builtin.py  coerce.py  mcp.py  policy.py  registry.py
tests/: test_adapter_lifecycle.py  test_history_compactor.py  test_mcp_tools.py  test_multimodal_content.py  test_runtime_enhancements.py
