[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "all-in-agents"
version = "0.2.13"
description = "A minimal, universal agent framework. Zero mandatory dependencies."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai    = ["openai>=1.0.0"]
jsonschema = ["jsonschema>=4.0.0"]
mcp = ["mcp>=1.12.4"]
all = ["anthropic>=0.40.0", "openai>=1.0.0", "jsonschema>=4.0.0", "mcp>=1.12.4"]

[project.urls]
Homepage   = "https://github.com/FutureUnreal/all-in-agents"
Repository = "https://github.com/FutureUnreal/all-in-agents"

[project.scripts]
all-in-agents = "all_in_agents.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/all_in_agents"]
